kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: oc-example-service
    servicePort: 80
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: oc-example-service
          servicePort: 8079
